--- a/css/app.css
+++ b/css/app.css
@@ -170,8 +170,9 @@ div.scrollmenu {
   overflow: auto;
   white-space: nowrap;
   margin-right: 50px;
-  width: 100%;
-  margin-right: 50px;
+  width: 350px;
+  margin-right: 600px;
+  white-space: nowrap;
 }
 
 div.scrollmenu button {
@@ -181,7 +182,7 @@ div.scrollmenu button {
   color: white;
   text-align: center;
   padding: 14px;
-  margin-left: 50px;
+  margin-left: 20px;
   margin-bottom: 10px;
   text-decoration: none;
 }
@@ -195,34 +196,44 @@ div.scrollmenu button:hover {
   top: 0px;
   right: 0px;
   height: 100vh;
-  width: 350px;
+  width: 400px;
   background-color: whitesmoke;
 }
 
 .cart {
   height: 250px;
-  background-color: tan;
-  overflow: hidden;
+  background-color: rgb(166, 112, 187);
+  overflow: auto;
+}
+
+.cart-item {
+  width: 100%;
+  height: 70px;
+  color: whitesmoke;
+  text-align: center;
+  margin-top: 10px;
 }
 
 .money {
   display: flex;
   justify-content: space-evenly;
+  flex-direction: row;
   align-items: flex-start;
   flex-wrap: wrap;
 }
 
 .money-item {
-  font-size: 18px;
+  font-size: 16px;
+  text-align: center;
   border: 1px solid black;
-  width: 5px;
-  padding: 5px 35px;
+  width: 20%;
+  padding: 5px 0;
   margin: 5px 5px;
 }
 
 .products {
   padding: 20px;
-  height: 80vh;
+  height: 74vh;
   background-color: rgb(14, 13, 13);
   width: 65vw;
 }
