--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 .bgImg {
   background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),
